updated Firefox package, fixed host install bugs

--- a/Firefox/popup/lookup.html
+++ b/Firefox/popup/lookup.html
@@ -9,7 +9,8 @@
     <hr>
     <div id="server_list">
       <div id="waiting">Waiting for Response</div>
-      <div class="spinner">
+      <div id="message"></div>
+      <div id="spinner">
         <div class="rect1"></div>
         <div class="rect2"></div>
         <div class="rect3"></div>
