Added source info to popup window

--- a/Firefox/popup/lookup.html
+++ b/Firefox/popup/lookup.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h3 id="header">Local HTTP Servers</h3>
+    <small id="source"></small>
     <hr>
     <div id="server_list">
       <div id="waiting">Waiting for Response</div>
