--- a/Chrome/popup/lookup.html
+++ b/Chrome/popup/lookup.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h3 id="header">Local HTTP Servers</h3>
+    <small id="source"></small>
     <hr>
     <div id="server_list">
       <div id="waiting">Waiting for Response</div>
@@ -25,4 +26,3 @@
     <script src="lookup.js"></script>
   </body>
 </html>
-
