--- a/Firefox/popup/lookup.html
+++ b/Firefox/popup/lookup.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3 id="header">Local HTTP Servers</h3>
-    <small id="source"></small>
+    <div id="source"></div>
     <hr>
     <div id="server_list">
       <div id="waiting">Waiting for Response</div>
